fix: update image path to fix broken css compile

--- a/less/components/_featured-jumbotron.less
+++ b/less/components/_featured-jumbotron.less
@@ -8,7 +8,7 @@
  * SPDX-License-Identifier: EPL-2.0
 */
 .featured-jumbotron {
-  background-image: url('images/jumbotron-bg-default.jpg');
+  background-image: url('../images/jumbotron-bg-default.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
